--- a/config/locales/bm.yml
+++ b/config/locales/bm.yml
@@ -2,9 +2,21 @@
 # See https://github.com/svenfuchs/rails-i18n/tree/master/rails%2Flocale for starting points.
 
 bm:
+
+  date:
+    order:
+    - :day
+    - :month
+    - :year
+    
   hello: "Hello world"
   are_you_sure: 'Anda Pasti?'
   back: 'Kembali'
+  date: 'Tarikh'
+  time: 'Masa'
+  venue: 'Tempat'
+  official: 'Perasmi'
+  organizer: 'Penganjur'
   show: 'Papar'
   edit: 'Kemas Kini'
   destroy: 'Padam'
@@ -13,11 +25,15 @@ bm:
   designation: 'Jawatan'
   edit_media_profile: 'Kemas Kini Profil Media'
   new_media_profile: 'Profil Media Baru'
+  edit_event: 'Kemas Kini Acara'
+  new_event: 'Acara Baru'
   email: 'Email'
   media_type: 'Jenis Media'
   company_name: 'Nama Syarikat'
   office_phone: 'No Telefon Ofis'
   phone: 'No Telefon'
+  event_successfuly_created: 'Acara Berjaya Didaftar'
+  event_successfuly_updated: 'Acara Berjaya Dikemas Kini'
   media_profile_successfully_created: 'Profil Media Berjaya Didaftar'
   media_profile_successfully_updated: 'Profile Media Berjaya Dikemas Kini'
   save: 'Simpan'
@@ -35,9 +51,18 @@ bm:
       title: 'Maklumat Profil Media'
       name_title: 'Gelaran'
 
+  events:
+    index:
+      title: 'Senarai Acara'
+    edit:
+      title: 'Kemas Kini Acara'
+    show:
+      title: 'Maklumat Acara'
+
   layouts:
     header:
       list_all_media_profiles: 'Senarai Profil Media'
+      list_all_events: 'Senarai Acara'
 
   activerecord:
     attributes: 
@@ -54,4 +79,3 @@ bm:
               blank: 'tidak boleh kosong.'
 
 
-  
