read email and rsvp answer column on attendance

--- a/config/locales/bm.yml
+++ b/config/locales/bm.yml
@@ -35,6 +35,11 @@ bm:
   company_name: 'Nama Syarikat'
   office_phone: 'No Telefon Ofis'
   phone: 'No Telefon'
+  read_email: 'Email Dibaca?'
+  rsvp_response: 'Jawapan RSVP'
+  present: 'Hadir'
+  not_present: 'Tidak Hadir'
+  cannot_attend: 'Tidak Dapat Hadir'
   event_successfully_created: 'Acara Berjaya Didaftar'
   event_successfully_updated: 'Acara Berjaya Dikemas Kini'
   media_profile_successfully_created: 'Profil Media Berjaya Didaftar'
