--- a/config/locales/bm.yml
+++ b/config/locales/bm.yml
@@ -12,6 +12,7 @@ bm:
   hello: "Hello world"
   are_you_sure: 'Anda Pasti?'
   all_media: 'Semua Media'
+  add_attendee: 'Tambah Peserta'
   agenda_details: 'Maklumat Agenda'
   back: 'Kembali'
   date: 'Tarikh'
@@ -45,6 +46,7 @@ bm:
   media_profile_successfully_created: 'Profil Media Berjaya Didaftar'
   media_profile_successfully_updated: 'Profile Media Berjaya Dikemas Kini'
   save: 'Simpan'
+  update: 'Kemas Kini'
   send: 'Hantar'
 
   media_profiles: 
