--- a/config/locales/bm.yml
+++ b/config/locales/bm.yml
@@ -19,7 +19,7 @@ bm:
   are_you_sure: 'Anda Pasti?'
   all_media: 'Semua Media'
   add_attendee: 'Tambah Peserta'
-  agenda_details: 'Maklumat Agenda'
+  agenda_details: 'Aturcara Majlis'
   back: 'Kembali'
   date: 'Tarikh'
   details: 'Maklumat'
