email peribadi update locale. email rasmi also.

--- a/config/locales/bm.yml
+++ b/config/locales/bm.yml
@@ -49,8 +49,8 @@ bm:
   edit_event: 'Kemas Kini Acara'
   new_event: 'Acara Baru'
   event_name: 'Nama Acara'
-  email: 'Email Rasmi'
-  personal_email: 'Email Peribadi'
+  email: 'Email rasmi'
+  personal_email: 'Email peribadi'
   media_type: 'Jenis Media'
   media_name: 'Nama Media'
   company_name: 'Nama Syarikat'
