Add 'Semua'. 'Semua' shows all. 'Semua Media' shows only media. Add new 'is_internal' field to show which is not media (MPS Dalaman, etc)

--- a/config/locales/bm.yml
+++ b/config/locales/bm.yml
@@ -18,6 +18,7 @@ bm:
 
   hello: "Hello world"
   are_you_sure: 'Anda Pasti?'
+  all: 'Semua'
   all_media: 'Semua Media'
   add_attendee: 'Tambah Peserta'
   edit_recipients: 'Edit Penerima'
