Change to button. locale changes.

--- a/config/locales/bm.yml
+++ b/config/locales/bm.yml
@@ -37,6 +37,7 @@ bm:
   organizer: 'Penganjur'
   show: 'Papar'
   edit: 'Kemas Kini'
+  remove: 'Buang'
   destroy: 'Padam'
   name: 'Nama'
   name_title: 'Gelaran'
@@ -69,6 +70,7 @@ bm:
   event_successfully_updated: 'Acara Berjaya Dikemas Kini'
   media_profile_successfully_created: 'Profil Media Berjaya Didaftar'
   media_profile_successfully_updated: 'Profile Media Berjaya Dikemas Kini'
+  print: 'Cetak'
   save: 'Simpan'
   update: 'Kemas Kini'
   update_attendance: 'Kemas Kini Kehadiran'
